// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover Renders correct content when both start date and end date are provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "June 17, 2021, 10:00 AM EDT",
          "start": "June 15, 2021, 3:00 PM EDT",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithStartEnd"
    />
  </div>
</Fragment>
`;

exports[`MaintenanceTakeover Renders correct content when only start date is provided 1`] = `
<Fragment>
  <div
    className="upcoming-maintenance-banner bg-yellow padding-1 text-center"
    role="alert"
  >
    <Trans
      components={
        Object {
          "end": "",
          "start": "June 15, 2021, 3:00 PM EDT",
        }
      }
      i18nKey="components.upcomingMaintenanceBanner.messageWithStartNoEnd"
    />
  </div>
</Fragment>
`;
